[tool.poetry]
name = "z3_batchsolver"
version = "1.0.0"
description = ""
authors = ["maheenmatin <maheenmatin@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "z3_batchsolver", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
z3-solver = "4.14.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
